src/test/deca/syntax/invalid/class/list_decl_champ_vide.deca
/*
	Description: laisse vide dans une decl champ

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected int x=23, y= 123, z , ;
}
